bk_ida/gccida/c2/finish_spills
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/finish_spills/src/reload1.c:4109:6: error: expected expression
v1 = ::used_spill_regs; 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/finish_spills/src/reload1.c:4154:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 3642, "finish_spills"); 
              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/finish_spills/src/reload1.c:4313:7: error: expected expression
v36 = ::used_spill_regs & ~v41[0]; 
      ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/finish_spills/src/reload1.c:4316:15: error: use of undeclared identifier 'off_7088B8'
fancy_abort( &off_7088B8[4], 3721, "finish_spills"); 
              ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/finish_spills/src/obj/reload1.o] Error 1
